--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <header class="navbar">
     <div class="logo">
-      <img src="assets/img/iconos/logo.png" alt="Steak Kitchen">
+      <img src="assets/img/iconos/logo.jpg" alt="Steak Kitchen">
       <h1>Steak Kitchen</h1>
     </div>
 
@@ -35,8 +35,8 @@
       <li><a href="#inicio">Inicio</a></li>
       <li><a href="#nosotros">Nosotros</a></li>
       <li><a href="#servicios">Servicios</a></li>
-      <li><a href="/frontend/eventos.html">Eventos</a></li>
-      <li><a href="/frontend/contacto.html">Contacto</a></li>
+      <li><a href="/eventos.html">Eventos</a></li>
+      <li><a href="/contacto.html">Contacto</a></li>
       <li><a href="#" id="btn-login">Admin</a></li> <!-- 👈 Nuevo botón -->
     </ul>
     </nav>
