--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <li><a href="#inicio">Inicio</a></li>
       <li><a href="#nosotros">Nosotros</a></li>
       <li><a href="#servicios">Servicios</a></li>
-      <li><a href="/frontend/eventos.html">Eventos</a></li>
-      <li><a href="/frontend/contacto.html">Contacto</a></li>
+      <li><a href="/eventos.html">Eventos</a></li>
+      <li><a href="/contacto.html">Contacto</a></li>
       <li><a href="#" id="btn-login">Admin</a></li> <!-- 👈 Nuevo botón -->
     </ul>
     </nav>
