--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Steak Kitchen | Contacto</title>
-  <link rel="stylesheet" href="/frontend/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="../css/animaciones.css">
   <link rel="stylesheet" href="../css/responsive.css">
   <link rel="icon" href="../assets/img/iconos/logo.png">
