--- a/eventos.html
+++ b/eventos.html
@@ -4,27 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eventos | Steak Kitchen</title>
-  <link rel="stylesheet" href="/css/style.css">
+
+  <!-- Estilos principales -->
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animaciones.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="icon" href="assets/img/iconos/logo.png">
-</head>
 
+  <!-- Tipografía moderna -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome (íconos redes y WhatsApp) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+</head>
 <body>
-  <!-- Navbar -->
+
+  <!-- ========== NAVBAR ========== -->
   <header class="navbar">
     <div class="logo">
       <img src="assets/img/iconos/logo.png" alt="Steak Kitchen">
       <h1>Steak Kitchen</h1>
     </div>
-
-    <!-- Icono hamburguesa -->
-    <div class="menu-toggle" id="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-
     <nav>
       <ul id="nav-links">
         <li><a href="index.html#inicio">Inicio</a></li>
@@ -36,8 +36,8 @@
     </nav>
   </header>
 
-  <!-- Hero / Encabezado de eventos -->
-  <section class="hero eventos-hero">
+  <!-- ========== HERO ========== -->
+  <section class="hero">
     <div class="hero-texto">
       <h1 class="hero-titulo">Eventos & Experiencias</h1>
       <h3 class="hero-frase">Creamos momentos inolvidables con el auténtico sabor brasileño</h3>
@@ -45,98 +45,186 @@
     </div>
   </section>
 
-  <!-- Sección de eventos destacados -->
-  <section id="eventos" class="eventos">
+  <!-- ========== EVENTOS DESTACADOS ========== -->
+  <section id="servicios" class="servicios">
     <h2 class="titulo-seccion">Nuestros Eventos</h2>
     <p class="intro-servicios">
       En <strong>Steak Kitchen</strong> nos especializamos en brindar experiencias gastronómicas únicas para toda ocasión.
     </p>
 
     <div class="servicios-grid">
-      <div class="servicio-card">
-        <div class="servicio-imagen">
-          <img src="assets/img/eventos/corporativo.jpg" alt="Evento corporativo">
-        </div>
-        <h3>Eventos Corporativos</h3>
-        <p>
-          Ideal para empresas que buscan sorprender a sus colaboradores o clientes con una experiencia gourmet.
-        </p>
-      </div>
 
-      <div class="servicio-card">
-        <div class="servicio-imagen">
-          <img src="assets/img/eventos/boda.jpg" alt="Boda elegante">
-        </div>
-        <h3>Bodas & Celebraciones</h3>
-        <p>
-          Hacemos de tu boda o celebración un evento inolvidable con nuestro servicio de espadas brasileñas.
-        </p>
+  <!-- 🏢 EVENTOS CORPORATIVOS -->
+  <article class="servicio-card">
+    <div class="servicio-imagen carrusel" id="carrusel1">
+      <button class="carrusel-btn prev" onclick="cambiarSlide('carrusel1', -1)">❮</button>
+      <div class="slides">
+        <img src="assets/img/eventos/evento1.jpg" class="active" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento4.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento10.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento13.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento15.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento16.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento17.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento28.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento30.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento33.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento34.jpg" alt="Evento corporativo">
+        <img src="assets/img/eventos/evento36.jpg" alt="Evento corporativo">
       </div>
+      <button class="carrusel-btn next" onclick="cambiarSlide('carrusel1', 1)">❯</button>
+    </div>
+    <h3>Eventos Corporativos</h3>
+    <p>Ideal para empresas que buscan sorprender a sus colaboradores o clientes con una experiencia gourmet.</p>
+  </article>
 
-      <div class="servicio-card">
-        <div class="servicio-imagen">
-          <img src="assets/img/eventos/privado.jpg" alt="Evento privado">
-        </div>
-        <h3>Eventos Privados</h3>
-        <p>
-          Desde reuniones familiares hasta cumpleaños, nos encargamos de todos los detalles gastronómicos.
-        </p>
+  <!-- 💍 BODAS Y CELEBRACIONES -->
+  <article class="servicio-card">
+    <div class="servicio-imagen carrusel" id="carrusel2">
+      <button class="carrusel-btn prev" onclick="cambiarSlide('carrusel2', -1)">❮</button>
+      <div class="slides">
+        <img src="assets/img/eventos/evento2.jpg" class="active" alt="Boda elegante">
+        <img src="assets/img/eventos/evento12.jpg" alt="Boda elegante">
+        <img src="assets/img/eventos/evento13.jpg" alt="Boda elegante">
+        <img src="assets/img/eventos/evento14.jpg" alt="Boda elegante">
+        <img src="assets/img/eventos/evento22.jpg" alt="Boda elegante">
+        <img src="assets/img/eventos/evento23.jpg" alt="Boda elegante">
+        <img src="assets/img/eventos/evento31.jpg" alt="Boda elegante">
+        <img src="assets/img/eventos/evento35.jpg" alt="Boda elegante">
+        <img src="assets/img/eventos/evento37.jpg" alt="Boda elegante">
       </div>
+      <button class="carrusel-btn next" onclick="cambiarSlide('carrusel2', 1)">❯</button>
+    </div>
+    <h3>Bodas & Celebraciones</h3>
+    <p>Hacemos de tu boda o celebración un evento inolvidable con nuestro servicio de espadas brasileñas.</p>
+  </article>
+
+  <!-- 🎉 EVENTOS PRIVADOS -->
+  <article class="servicio-card">
+    <div class="servicio-imagen carrusel" id="carrusel3">
+      <button class="carrusel-btn prev" onclick="cambiarSlide('carrusel3', -1)">❮</button>
+      <div class="slides">
+        <img src="assets/img/eventos/evento3.jpg" class="active" alt="Evento privado">
+        <img src="assets/img/eventos/evento5.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento6.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento9.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento11.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento12.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento18.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento19.jpeg" alt="Evento privado">
+        <img src="assets/img/eventos/evento20.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento21.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento24.jpg" alt="Evento privado">
+        <img src="assets/img/eventos/evento26.jpg" alt="Evento privado">
+      </div>
+      <button class="carrusel-btn next" onclick="cambiarSlide('carrusel3', 1)">❯</button>
+    </div>
+    <h3>Eventos Privados</h3>
+    <p>Desde reuniones familiares hasta cumpleaños, nos encargamos de todos los detalles gastronómicos.</p>
+  </article>
+
+</div>
+
+  </section>
+
+  <!-- ========== GALERÍA / INSTAGRAM ========== -->
+  <section id="galeria" class="galeria">
+    <h2>Galería de Eventos</h2>
+    <p class="galeria-subtitulo">La mejor experiencia con el mejor servicio.</p>
+
+    <div class="galeria-carrusel">
+      <div class="galeria-slideshow">
+        <img src="assets/img/eventos/evento1.jpg" class="active" alt="Evento 1">
+        <img src="assets/img/eventos/evento2.jpg" alt="Evento 2">
+        <img src="assets/img/eventos/evento3.jpg" alt="Evento 3">
+        <img src="assets/img/eventos/evento4.jpg" alt="Evento 4">
+      </div>
+      <button class="galeria-btn prev">❮</button>
+      <button class="galeria-btn next">❯</button>
+    </div>
+
+    <div class="instagram-feed">
+      <h3>📲 Últimas publicaciones</h3>
+      <iframe src="https://www.instagram.com/steak_kitchen_/embed" loading="lazy" title="Instagram Steak Kitchen"></iframe>
     </div>
   </section>
 
-  <!-- Galería extendida -->
-  <section class="galeria">
-    <h2>Galería de Experiencias</h2>
-    <div class="galeria-grid">
-      <img src="assets/img/eventos/1.jpg" alt="Evento 1">
-      <img src="assets/img/eventos/2.jpg" alt="Evento 2">
-      <img src="assets/img/eventos/3.jpg" alt="Evento 3">
-      <img src="assets/img/eventos/4.jpg" alt="Evento 4">
-      <img src="assets/img/eventos/5.jpg" alt="Evento 5">
-      <img src="assets/img/eventos/6.jpg" alt="Evento 6">
-    </div>
-  </section>
-
-  <!-- Testimonios -->
-  <section class="testimonios">
-    <h2>Lo que dicen nuestros clientes</h2>
-    <div class="testimonios-grid">
-      <div class="testimonio-card">
-        <p>"¡Increíble experiencia! El servicio y la comida fueron espectaculares. Mis invitados quedaron fascinados."</p>
-        <h4>- Laura Méndez, Boda en Querétaro</h4>
-      </div>
-
-      <div class="testimonio-card">
-        <p>"Contratamos para un evento corporativo y fue todo un éxito. Muy profesionales y atentos a los detalles."</p>
-        <h4>- Carlos Ramírez, Evento Empresarial</h4>
-      </div>
-
-      <div class="testimonio-card">
-        <p>"Excelente calidad en carnes y atención personalizada. 100% recomendados."</p>
-        <h4>- Fernanda López, Fiesta Privada</h4>
-      </div>
-    </div>
-  </section>
-
-  <!-- Botón flotante WhatsApp -->
-  <a href="https://wa.me/5214423813649" class="whatsapp-float" target="_blank">
-    <img src="assets/img/iconos/whatsapp.png" alt="WhatsApp">
+  <!-- ========== BOTÓN WHATSAPP ========== -->
+  <a href="https://wa.me/5214423813649?text=Hola%20quiero%20más%20información%20sobre%20eventos" 
+     class="whatsapp-float" target="_blank" aria-label="WhatsApp">
+    <i class="fa-brands fa-whatsapp"></i>
   </a>
 
-  <!-- Footer -->
-  <footer>
+  <!-- ========== FOOTER ========== -->
+  <footer class="footer">
     <div class="footer-contenido">
-      <p>&copy; 2025 Steak Kitchen | Todos los derechos reservados</p>
-      <div class="redes">
-        <a href="#"><img src="assets/img/iconos/facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="assets/img/iconos/instagram.png" alt="Instagram"></a>
-        <a href="#"><img src="assets/img/iconos/tiktok.png" alt="TikTok"></a>
+      <div>
+        <h3>📍 VISÍTANOS 🥩</h3>
+        <p>Calle Paseos Querétaro No. 2182</p>
+        <p>Col. Paseos de San Miguel, Querétaro</p>
       </div>
+
+      <div>
+        <h3>📞 CONTACTO</h3>
+        <p>📧 <a href="mailto:contacto@steakkitchen.com.mx">contacto@steakkitchen.com.mx</a></p>
+        <p>📱 <a href="tel:+524423813649">+52 442 381 3649</a></p>
+        <p>📅 Reservaciones: <a href="tel:+524423104112">+52 442 310 4112</a></p>
+      </div>
+
+      <div>
+        <h3>🕒 HORARIO</h3>
+        <p>Martes a Domingo</p>
+        <p>2:00 PM – 10:00 PM</p>
+      </div>
+
+      <div>
+        <h3>🌐 SÍGUENOS</h3>
+        <div class="redes">
+          <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-copy">
+      <p>© 2025 Steak Kitchen. Todos los derechos reservados.</p>
     </div>
   </footer>
 
-  <script src="/frontend/js/main.js"></script>
-  <script src="js/animaciones.js"></script>
+  <!-- ========== JS CARRUSEL ========== -->
+  <script>
+    const slides = document.querySelectorAll('.galeria-slideshow img');
+    const prevBtn = document.querySelector('.galeria-btn.prev');
+    const nextBtn = document.querySelector('.galeria-btn.next');
+    let current = 0;
+
+    const showSlide = i => slides.forEach((img, idx) => img.classList.toggle('active', idx === i));
+    const nextSlide = () => { current = (current + 1) % slides.length; showSlide(current); };
+    const prevSlide = () => { current = (current - 1 + slides.length) % slides.length; showSlide(current); };
+
+    nextBtn.addEventListener('click', nextSlide);
+    prevBtn.addEventListener('click', prevSlide);
+    setInterval(nextSlide, 4000);
+  </script>
+  
+
+  <script>
+  function cambiarSlide(id, dir) {
+    const carrusel = document.getElementById(id);
+    const slides = carrusel.querySelectorAll('.slides img');
+    let index = Array.from(slides).findIndex(img => img.classList.contains('active'));
+    slides[index].classList.remove('active');
+    index = (index + dir + slides.length) % slides.length;
+    slides[index].classList.add('active');
+  }
+
+  // Cambio automático cada 4 segundos por carrusel
+  setInterval(() => cambiarSlide('carrusel1', 1), 4000);
+  setInterval(() => cambiarSlide('carrusel2', 1), 5000);
+  setInterval(() => cambiarSlide('carrusel3', 1), 6000);
+</script>
+
+
 </body>
 </html>
